--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/menge_vendor
-	previous = 
-	base = 2c93687
+	previous = 2c93687
+	base = 871c507
 	trim = 
 	trimbase = 
