--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/menge_vendor
-	previous = 
-	base = 08b35ba
+	previous = 08b35ba
+	base = 9e93292
 	trim = 
 	trimbase = 
