--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/menge_vendor
-	previous = 
-	base = cc064cf
+	previous = cc064cf
+	base = fe83578
 	trim = 
 	trimbase = 
